--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body{
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 15rem;
-    margin: auto;
+    /* margin: auto; */
     /* margin-top: 5%; */
 }
 
